--- a/style.css
+++ b/style.css
@@ -90,14 +90,18 @@ nav button:hover {
     padding-bottom: 30px;
 }
 
-.card name{
-    padding-bottom: 15px;
+.card h4{
+    display: flex;
+    align-items: start;
+    margin-top: 5px;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 300;
 }
 
-.card price{
+.card p{
+    align-items: start;
     font-size: 16px;
     font-weight: 300;
+    margin-top: 1px;
 }
 
